chore: Add gh-pages deployment configuration
Configured the project for deployment to GitHub Pages. Added gh-pages
as a development dependency and set up npm scripts for building and
deploying the app.

- Added "gh-pages" package to devDependencies.
- Configured "predeploy" and "deploy" scripts for GitHub Pages.
- Updated package.json with the project's homepage URL for GitHub Pages.
- Updated package-lock.json to reflect changes in dependencies.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -43,7 +45,9 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
+        "gh-pages": "^6.1.1",
         "postcss": "^8.4.45",
         "tailwindcss": "^3.4.10"
-    }
+    },
+    "homepage": "http://do0ori.github.io/image-ratio-padder"
 }
